--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -6,3 +6,5 @@ Hugo directory and insert:
 
 or whatever comment engine you want -> https://gohugo.io/content-management/comments/#readout
 -->
+<script src="https://utteranc.es/client.js" repo="ntk148v/blog" issue-term="pathname" theme="photon-dark" crossorigin="anonymous" async>
+</script>
