--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,7 +5,7 @@
 
   {{ $PageContext := . }}
   {{ if .IsHome }}
-    {{ $PageContext = .Site }}
+  {{ $PageContext = .Site }}
   {{ end }}
   {{ $paginator := .Paginate (where $PageContext.RegularPages "Type" $contentTypeName) }}
 
@@ -17,8 +17,15 @@
       <span class="post-date">
         {{ .Date.Format "2006-01-02" }}
       </span>
-      {{ with .Params.Author }}<span class="post-author">::
-        {{ . }}</span>{{ end }}
+      <div class="authors-container">
+        {{ with .Params.Authors }}
+        {{ range . }}
+        {{ with $.Site.GetPage "taxonomyTerm" (printf "authors/%s" (urlize .)) }}
+        <figcaption><a href="{{ .Permalink }}">{{ .Params.name }}</a></figcaption>
+        {{ end }}
+        {{ end }}
+        {{ end }}
+      </div>
     </div>
 
     {{ if .Params.tags }}
@@ -49,8 +56,7 @@
 
     {{ if not .Params.showFullContent }}
     <div>
-      <a class="read-more button"
-        href="{{.RelPermalink}}">{{ $.Site.Params.ReadMore }} →</a>
+      <a class="read-more button" href="{{.RelPermalink}}">{{ $.Site.Params.ReadMore }} →</a>
     </div>
     {{ end }}
   </div>
