--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,16 +3,20 @@
   <h1 class="post-title">
     <a href="{{ .Permalink }}">{{ .Title | markdownify }}</a></h1>
   <div class="post-meta">
-      {{ if .Params.Date }}
+    {{ if .Params.Date }}
     <span class="post-date">
       {{ .Date.Format "2006-01-02" }}
     </span>
     {{ end }}
-    {{ with .Params.Author }}
-    <span class="post-author">::
-      {{ . }}
-    </span>
-    {{ end }}
+    <div class="authors-container">
+      {{ with .Params.Authors }}
+      {{ range . }}
+      {{ with $.Site.GetPage "taxonomyTerm" (printf "authors/%s" (urlize .)) }}
+      <figcaption><a href="{{ .Permalink }}">{{ .Params.name }}</a></figcaption>
+      {{ end }}
+      {{ end }}
+      {{ end }}
+    </div>
   </div>
 
   {{ if .Params.tags }}
@@ -33,8 +37,7 @@
   {{ if or .NextInSection .PrevInSection }}
   <div class="pagination">
     <div class="pagination__title">
-      <span
-        class="pagination__title-h">{{ $.Site.Params.ReadOtherPosts }}</span>
+      <span class="pagination__title-h">{{ $.Site.Params.ReadOtherPosts }}</span>
       <hr />
     </div>
     <div class="pagination__buttons">
