--- a/static/style.css
+++ b/static/style.css
@@ -64,3 +64,18 @@
     object-fit: cover;
     opacity: 1;
 }
+
+.post-title {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    background: #78e2a0;
+    background: var(--accent);
+    color: #000;
+    padding: 5px 10px;
+    margin: 0 0 15px;
+}
+
+.post-title:after {
+    border-bottom: none;
+}
