--- a/static/style.css
+++ b/static/style.css
@@ -69,11 +69,10 @@
     display: flex;
     align-items: center;
     text-decoration: none;
-    background: #78e2a0;
-    background: var(--accent);
-    color: #000;
-    padding: 5px 10px;
+    color: var(--accent);
+    padding: 0 0 10px;
     margin: 0 0 15px;
+    border-bottom: none;
 }
 
 .post-title:after {
