--- a/static/style.css
+++ b/static/style.css
@@ -78,3 +78,15 @@
 .post-title:after {
     border-bottom: none;
 }
+
+a.read-more,
+a.read-more:active,
+a.read-more:hover {
+    display: inline-flex;
+    background: var(--accent);
+    color: #000;
+    box-shadow: none;
+    padding:5px 10px;
+    align-items: center;
+    max-width: 100%
+}
