--- a/static/style.css
+++ b/static/style.css
@@ -26,7 +26,7 @@
     zoom: 1;
 }
 
-.author-container ul li:before{
+.author-container ul li:before {
     display: none;
 }
 
@@ -90,7 +90,12 @@ a.read-more:hover {
     background: var(--accent);
     color: #000;
     box-shadow: none;
-    padding:5px 10px;
+    padding: 5px 10px;
     align-items: center;
     max-width: 100%
+}
+.home {
+    width: 100%;
+    display: block;
+    padding: 20% 0 20%;
 }
